# trading-floor

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  Launch Trading Floor.bat  Makefile  PHASE2_GRAPH_WIRING.md  PHASE_COMPLETE.md  QUICKSTART.md  README.md  SETUP.md  Start Paper Trading.bat  WEEKS_01_02_HANDOFF.md  alembic.ini  cleanup.bat  commit.bat  commit_msg.txt  docker-compose.yml  final_cleanup.bat  g.bat  mypy.ini  pyproject.toml  ruff.toml  run.ps1  start.bat  verify.bat
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_agent_episodes.py  003_trade_outcomes.py
deploy/: README.md  cloudflare-tunnel.yml  monitors.service  paper-trading.service  setup-server.sh  trading-episode-writer.service  trading-floor.service
docs/: 01-brd-foundation.md  02-phased-lld.md  03-ux-brd.md  04-design-system.md  05-user-journeys.md  06-copy-trade-scout.md  trading-floor-workflows.md
frontend/: Dockerfile  do_git.bat  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AppNav.tsx  ApprovalBanner.tsx  DashSkeleton.tsx  DataFeedStatus.tsx  DeskStrip.tsx  DeskTasksPanel.tsx  ExchangeSelector.tsx  LlmCostCard.tsx  MarketExplorer.tsx  (+5 more)
runbooks/: episode-pipeline.md
scripts/: bootstrap_streams.py  health_check.py  ingest_ohlcv.py  run_backtest.py  run_counterfactual_attribution.py  run_episode_writer.py  run_monitors.py  run_outcome_writer.py  run_paper_trading.py  run_scheduler.py  seed_db.py
tests/: conftest.py  test_health.py  test_streams.py  test_week01_immutability.py  test_week01_memory_pr.py  test_week01_safety_pr.py  test_week02_portfolio_pr.py
(+166 files in other folders)
