[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trading-floor"
version = "0.1.0"
description = "Multi-agent AI trading system"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.30",
    "langgraph>=0.2",
    "ccxt>=4.3",
    "httpx>=0.27",
    "alpaca-py>=0.26",
    "nautilus_trader>=1.200",
    "chronos-forecasting>=1.3",
    "torch>=2.3",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "redis>=5.0",
    "structlog>=24.1",
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "hmmlearn>=0.3",
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",
    "yfinance>=0.2",
    "uuid6>=2024.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]
sentiment = [
    # FinBERT (ProsusAI/finbert) — downloads ~440 MB model on first run, cached by HuggingFace
    # Requires CUDA or MPS for reasonable throughput; runs on CPU but slowly
    "transformers>=4.40",
    "torch>=2.2",
    # VADER — lightweight fallback, no GPU required, 60-70% of FinBERT accuracy
    "nltk>=3.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
